--- a/app/views/instance_admin/settings/payments/payment_gateways/_form.html.haml
+++ b/app/views/instance_admin/settings/payments/payment_gateways/_form.html.haml
@@ -8,7 +8,7 @@
           This Payment Gateway has live Merchant Accounts asscociated. If you want to disable it please first void all
           = link_to "Merchant Accounts", "/instance_admin/manage/merchant_accounts?payment_gateway_id=#{@payment_gateway.id}&state=verified&mode=live"
 
-= simple_form_for [:instance_admin, :settings, @payment_gateway] do |f|
+= simple_form_for [:instance_admin, :settings, @payment_gateway], html: {id: "edit-payment-gateway"} do |f|
   - if @payment_gateway.new_record?
     .content-container
       .row
@@ -103,8 +103,23 @@
                         Use ON/OFF switch to prevent users from using it. Payment Gateway will move into editable state when there are no refundable or pending Payments, all Merchant Accounts should be removed.
 
 
-
       %br
+    - if @payment_gateway.config_settings.present?
+      .content-container
+        .row
+          - @payment_gateway.config_settings.each do |key, options|
+            - if options.instance_of?(Hash)
+              .row
+                %h4=t('instance_admin.settings.payments.payment_gateways.edit.' + key.to_s)
+              .row
+                - options.each do |nested_key, nested_options|
+                  .input-container.col-xs-4
+                    = label_tag "payment_gateway[config][#{key}][#{nested_key}]", t("simple_form.labels.payment_gateway.config.#{key}.#{nested_key}")
+                    - if nested_options.try('[]', :valid_values)
+                      = select_tag "payment_gateway[config][#{key}][#{nested_key}]", options_for_select(nested_options.try('[]', :valid_values), @payment_gateway.config[key].try('[]', nested_key.to_s) ), { class: 'selectpicker' }.merge(nested_options.try('[]', :data))
+                    - else
+                      = text_field_tag "payment_gateway[config][#{key}][#{nested_key}]", @payment_gateway.config[key].try('[]', nested_key.to_s), { class: 'string required form-control' }.merge(nested_options.try('[]', :data))
+
 
 
     - unless @payment_gateway.new_record?
@@ -133,3 +148,7 @@
     = content_for :header_buttons do
       = button_tag t('instance_admin.save'), class: "btn btn-blue pull-right", data: { 'submit-form' => 1, 'form-selector' => 'form',  disable_with: "Please wait..."}
       = link_to t('instance_admin.cancel'), instance_admin_settings_payments_url , class: 'btn btn-light pull-right'
+
+- content_for :domready do
+  $(document).trigger('init:paymentgateway.nearme', ['#edit-payment-gateway'])
+
