--- a/lib/tasks/uot_templates/registrations_show.liquid
+++ b/lib/tasks/uot_templates/registrations_show.liquid
@@ -1,7 +1,7 @@
 <main id="main">
     <div class="wrapper-a">
         <div class="back-to-search-results">
-            <a href="search.html">Back to search results</a>
+            <a data-back-to-search-results-link href="/search">Back to search results</a>
         </div>
         <article class="user-a">
             <div class="wrapper">
@@ -117,7 +117,9 @@
 
             <aside class="sidebar">
                 <ul class="user-actions">
-                    <li><a href="./" class="button-a">Invite to project</a></li>
+                    {% if current_user != blank and current_user.has_seller_profile? %}
+                        <li><a href="./" class="button-a">Invite to project</a></li>
+                    {% endif %}
                     <li><a href="./" class="button-b action-favorite">Add as Favorite</a></li>
                     <li><a href="./" class="button-b action-blog">View Blog</a></li>
                     <li><a href="./" class="button-b action-linkedin">LinkedIn Bio</a></li>
