--- a/lib/tasks/uot_templates/registrations_show.liquid
+++ b/lib/tasks/uot_templates/registrations_show.liquid
@@ -116,7 +116,7 @@
             </div>
 
             <aside class="sidebar">
-                <ul class="user-actions">
+                <ul class="actions-a">
                     {% if current_user != blank and current_user.has_seller_profile? %}
                         <li><a href="./" class="button-a">Invite to project</a></li>
                     {% endif %}
@@ -153,7 +153,7 @@
 
                 <hr>
 
-                <ul class="user-actions">
+                <ul class="actions-a">
                     <li>
                         <button class="button-b action-flag" type="button">Flag as inappropriate</button>
                     </li>
