--- a/lib/tasks/uot_templates/search_list.liquid
+++ b/lib/tasks/uot_templates/search_list.liquid
@@ -157,10 +157,11 @@
                     </div>
 
                     <aside class="sidebar">
-                        <ul class="user-actions">
+                        <ul class="actions-a">
                             {% if current_user != blank and current_user.has_seller_profile? %}
                                 <li><a href="./" class="button-a">Invite to project</a></li>
                             {% endif %}
+
                             <li>{% include 'shared/components/wish_list_button_injection.html', object: user %}</li>
 
                             {% if user.has_active_blog? %}
