IDM-107 Groups description issue

--- a/app/community_views/shared/_group.html.haml
+++ b/app/community_views/shared/_group.html.haml
@@ -23,4 +23,4 @@
       = link_to group.name, group_path(group)
 
     %p
-      = group.description.to_s.truncate(100)
+      = group.summary.to_s.truncate(100)
