--- a/lib/tasks/uot_templates/registrations_show.liquid
+++ b/lib/tasks/uot_templates/registrations_show.liquid
@@ -117,7 +117,7 @@
 
             <aside class="sidebar">
                 <ul class="actions-a">
-                    {% if current_user != blank and current_user.has_seller_profile? %}
+                    {% if current_user != blank and current_user.has_seller_profile? and current_user.has_pending_transactables? %}
                         <li><a href="./" class="button-a">Invite to project</a></li>
                     {% endif %}
                     <li><a href="./" class="button-b action-favorite">Add as Favorite</a></li>
