--- a/lib/tasks/uot_templates/search_list.liquid
+++ b/lib/tasks/uot_templates/search_list.liquid
@@ -158,7 +158,7 @@
 
                     <aside class="sidebar">
                         <ul class="actions-a">
-                            {% if current_user != blank and current_user.has_seller_profile? %}
+                            {% if current_user != blank and current_user.has_seller_profile? and current_user.has_pending_transactables? %}
                                 <li><a href="./" class="button-a">Invite to project</a></li>
                             {% endif %}
 
