--- a/app/community_views/registrations/_show_activity.html.haml
+++ b/app/community_views/registrations/_show_activity.html.haml
@@ -25,4 +25,4 @@
               = t :video
             = video_embed_code
 
-        = render 'shared/featured_projects', projects: Project.featured.where.not(id: current_user.try(:feed_followed_projects) || []).take(10)
+        = render 'shared/featured_projects', projects: Transactable.featured.where.not(id: current_user.try(:feed_followed_transactables) || []).take(10)
