--- a/app/community_views/registrations/_show_following.html.haml
+++ b/app/community_views/registrations/_show_following.html.haml
@@ -11,7 +11,7 @@
         %li
           = link_to '#following-projects', role: "tab", :'data-toggle' => "tab" do
             = t :projects
-            %small= "(#{@projects_followed.total_entries})"
+            %small= "(#{@transactables_followed.total_entries})"
         %li
           = link_to '#following-topics', role: "tab", :'data-toggle' => "tab" do
             = t :topics
@@ -23,6 +23,6 @@
           = render 'shared/sort_form', form_url: see_more_following_people_path(id: @user.id, type: @user.class.name), sort_options: User::SORT_OPTIONS.map { |option| [I18n.t("simple_form.labels.search_filter.options.#{option}"), option] }, container: '#following-people'
           = render "shared/listing_people", users: @users_followed, see_more_type: "followingPeople", see_more_route: see_more_following_people_path(id: @user.id, type: @user.class.name, container: '#following-people')
         #following-projects.tab-pane.fade
-          = render "shared/show_projects", projects: @projects_followed, container: '#following-projects', see_more_route: see_more_following_projects_path(id: @user.id, type: @user.class.name, container: '#following-projects')
+          = render "shared/show_transactables", transactables: @transactables_followed, container: '#following-projects', see_more_route: see_more_following_transactables_path(id: @user.id, type: @user.class.name, container: '#following-projects')
         #following-topics.tab-pane.fade
           = render "shared/listing_topics", topics: @topics_followed
