--- a/app/community_views/registrations/show.html.haml
+++ b/app/community_views/registrations/show.html.haml
@@ -20,7 +20,7 @@
         %li
           = link_to '#projects', role: "tab", :'data-toggle' => "tab" do
             = t :projects
-            %small= "(#{@all_projects.total_count})"
+            %small= "(#{@all_transactables.total_count})"
         %li
           = link_to '#groups', role: "tab", :'data-toggle' => "tab" do
             = t :groups
@@ -57,7 +57,7 @@
       .contain
         / white box
         .box-a
-          = render 'shared/show_projects', projects: @all_projects, container: '#projects', see_more_route: see_more_projects_path(id: @user.id, type: @user.class.name, container: '#projects'), sort_options: Project::SORT_OPTIONS + ['Pending approvals']
+          = render 'shared/show_transactables', transactables: @all_transactables, container: '#projects', see_more_route: see_more_transactables_path(id: @user.id, type: @user.class.name, container: '#projects'), sort_options: Transactable::SORT_OPTIONS + ['Pending approvals']
 
   #groups.tab-pane.fade{:role => "tabpanel"}
     .wrap-a.reduce-top
