--- a/lib/tasks/uot/templates/body_end.liquid
+++ b/lib/tasks/uot/templates/body_end.liquid
@@ -1,4 +1,4 @@
 <script src="https://rawgit.com/mdyd-dev/marketplaces/master/uot/js/uot.js" async></script>
-<!--
-<script src="http://localhost/~Chris/marketplaces/uot/js/uot.js" async></script>
- -->
+
+<!-- <script src="http://localhost/~Chris/marketplaces/uot/js/uot.js" async></script> -->
+
