--- a/lib/tasks/uot/templates/head.liquid
+++ b/lib/tasks/uot/templates/head.liquid
@@ -9,3 +9,4 @@
   document.createElement( "picture" );
 </script>
 <script src="https://rawgit.com/mdyd-dev/marketplaces/master/uot/js/picturefill.min.js" async></script>
+<!-- <script src="http://localhost/~Chris/marketplaces/uot/js/picturefill.min.js" async></script> -->
