NM-5223 UoT Sign in / sign up screens

--- a/app/views/layouts/_header_navigation.html.haml
+++ b/app/views/layouts/_header_navigation.html.haml
@@ -102,7 +102,7 @@
 
   - else
     %li.divider-vertical
-    %li
+    %li.nav-main-register-link
       - options = {}
       - options[:role] = :buyer if current_instance.split_registration?
       = link_to_registration get_return_to_url(dashboard_orders_path, options), platform_context.secured_constraint, secure_links?, :class => "nav-link header-first", data: { modal: true, 'modal-class' => 'sign-up-modal', 'modal-overlay-close' => 'disabled' } do
