--- a/app/views/dashboard/company/transactables/edit.html.haml
+++ b/app/views/dashboard/company/transactables/edit.html.haml
@@ -28,4 +28,5 @@
       = f.button :submit, t('dashboard.items.save')
 
   .form-actions
-    = link_to t('dashboard.items.delete_listing'), dashboard_company_transactable_type_transactable_path(@transactable_type, @transactable), method: :delete, data: { confirm: t('dashboard.items.confirm_delete') }
+    = render 'dashboard/company/transactables/form_actions'
+
