--- a/lib/tasks/uot/templates/head.liquid
+++ b/lib/tasks/uot/templates/head.liquid
@@ -8,4 +8,5 @@
   // Picture element HTML5 shiv
   document.createElement( "picture" );
 </script>
+<!-- <script src="http://localhost/~Chris/marketplaces/uot/js/picturefill.min.js" async></script> -->
 <script src="https://rawgit.com/mdyd-dev/marketplaces/master/uot/js/picturefill.min.js" async></script>
