--- a/lib/tasks/uot/templates/registrations_show.liquid
+++ b/lib/tasks/uot/templates/registrations_show.liquid
@@ -117,8 +117,8 @@
 
             <aside class="sidebar">
                 <ul class="actions-a">
-                    {% if current_user != blank and current_user.has_seller_profile? and current_user.has_pending_transactables? %}
-                        <li><a href="./" class="button-a">Invite to project</a></li>
+                    {% if current_user != blank and current_user.has_seller_profile? %}
+                        <li><a href="#project-invite-{{ user.id }}" class="button-a" data-project-invite-trigger>Invite to project</a></li>
                     {% endif %}
                     <li><a href="./" class="button-b action-favorite">Add as Favorite</a></li>
                     <li><a href="./" class="button-b action-blog">View Blog</a></li>
@@ -160,5 +160,7 @@
                 </p>
             </aside>
         </article>
+
+        {% include 'transactables/invite.html' user: user %}
     </div>
 </main>
