--- a/lib/tasks/uot/templates/search_list.liquid
+++ b/lib/tasks/uot/templates/search_list.liquid
@@ -158,8 +158,8 @@
 
                     <aside class="sidebar">
                         <ul class="actions-a">
-                            {% if current_user != blank and current_user.has_seller_profile? and current_user.has_pending_transactables? %}
-                                <li><a href="./" class="button-a">Invite to project</a></li>
+                            {% if current_user != blank and current_user.has_seller_profile? %}
+                                <li><a href="#project-invite-{{ user.id }}" class="button-a" data-project-invite-trigger>Invite to project</a></li>
                             {% endif %}
 
                             <li>{% include 'shared/components/wish_list_button_injection.html', object: user %}</li>
@@ -176,12 +176,13 @@
                         <h4>Tags</h4>
                         <ul>
                             {% for tag in user.tags %}
-                                <li><a href="?query_fields=tags&query={{ tag.name }}">{{ tag.name }}</a></li>
+                                <li><a href="?query_fields=tags&amp;query={{ tag.name }}">{{ tag.name }}</a></li>
                             {% endfor %}
                         </ul>
                     </div>
-
                 </article>
+
+                {% include 'transactables/invite.html' user: user %}
             {% endfor %}
 
             {% if searcher.next_page %}
