--- a/lib/tasks/uot/templates/search_list.liquid
+++ b/lib/tasks/uot/templates/search_list.liquid
@@ -114,7 +114,7 @@
                                 </p>
                                 <dl class="property">
                                     <dt>Discounts:</dt>
-                                    <dd>{{ user.buyer_properties.discounts_available }}</dd>
+                                    <dd>{{ user.buyer_properties.discounts_available | humanize }}</dd>
                                 </dl>
                             </div>
 
