--- a/lib/tasks/uot/templates/search_list.liquid
+++ b/lib/tasks/uot/templates/search_list.liquid
@@ -42,14 +42,14 @@
                         <ul>
                             <li>
                                 <span class="radio-a">
-                                    <input type="radio" {% if searcher.lg_custom_attributes_hash['workplace_type'] contains 'online' %}checked{% endif %} id="filter-workplace-online" name="lg_custom_attributes[workplace_type][]" value="online">
+                                    <input type="radio" {% if searcher.lg_custom_attributes_hash['workplace_type'] contains 'Online' %}checked{% endif %} id="filter-workplace-online" name="lg_custom_attributes[workplace_type][]" value="Online">
                                     <label for="filter-workplace-online">Online</label>
                                 </span>
                             </li>
 
                             <li>
                                 <span class="radio-a">
-                                    <input type="radio" {% if searcher.lg_custom_attributes_hash['workplace_type'] contains 'on_site' %}checked{% endif %} id="filter-workplace-onsite" name="lg_custom_attributes[workplace_type][]" value="on_site">
+                                    <input type="radio" {% if searcher.lg_custom_attributes_hash['workplace_type'] contains 'On Site' %}checked{% endif %} id="filter-workplace-onsite" name="lg_custom_attributes[workplace_type][]" value="On Site">
                                     <label for="filter-workplace-onsite">On Site</label>
                                 </span>
                             </li>
