--- a/lib/tasks/uot/templates/listings_show.liquid
+++ b/lib/tasks/uot/templates/listings_show.liquid
@@ -1,3 +1,4 @@
+{% assign collaborator = current_user | find_collaborator: listing %}
 <main id="main">
     <div class="wrapper-a">
         <div class="back-to-search-results back-to-listings">
@@ -5,95 +6,99 @@
         </div>
 
         <article class="listing-a">
-            <h1>Keynote Speech</h1>
+          <h1>{{ listing.name }}</h1>
 
             <div class="content">
                 <div class="listing-properties">
                     <div class="overview">
-                        <h2>Client Name: <span>Jane Lane</span></h2>
-                        <div class="meta">Project posted <b>20</b> days ago</div>
+                      <h2>Client Name: <span>{{ listing.properties.project_contact }}</span></h2>
+                      <div class="meta">Project posted <b>{{ listing.created_at | time_ago_in_words }}</b> ago</div>
                     </div>
 
                     <div class="properties">
                         <dl>
-                            <dt>Client Name:</dt>
-                            <dd>Jane Lane</dd>
+                            <dt>Company Name:</dt>
+                            <dd>{{ listing.company.name }}</dd>
 
-                            <dt>Invite Sent:</dt>
-                            <dd><time datetime="2016-07-27">7-27-2016</time></dd>
+                            {% if collaborator != blank %}
+                              <dt>Invite Sent:</dt>
+                              <dd><time datetime="{{ collaborator.approved_by_owner_at }}">{{ collaborator.approved_by_owner_at | l: 'short'}}</time></dd>
+                            {% endif %}
 
                             <dt>Workplace:</dt>
-                            <dd>Online</dd>
+                            <dd>{{ listing.properties.workplace_type }}</dd>
 
-                            <dt>Workplace:</dt>
-                            <dd>Online</dd>
+                            {% if listing.properties.workplace_type == 'On Site' %}
+                              <dt>Office:</dt>
+                              <dd>{{ listing.properties.office_location }}</dd>
+                            {% endif %}
 
                             <dt>Languages:</dt>
-                            <dd>English, Spanish</dd>
+                            <dd>{{ listing.categories["Languages"]["children"] | join: ', ' }}</dd>
                         </dl>
 
                         <dl>
                             <dt>Approx. Budget:</dt>
-                            <dd>$1800</dd>
+                            <dd>{{ listing.properties.budget | pricify }}</dd>
 
                             <dt>Deadline:</dt>
-                            <dd>9-25-2016</dd>
+                            <dd>{{ listing.properties.deadline | to_date | l: 'short' }}</dd>
 
                             <dt>Approx. Time to Complete: </dt>
-                            <dd>2 Weeks</dd>
+                            <dd>{{ listing.properties.estimation }}</dd>
                         </dl>
                     </div>
                 </div>
 
                 <div class="listing-description">
                     <h3>Vignette of a Scope:</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget odio.</p>
-
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget odio.</p>
+                    <p>{{ listing.description }}</p>
 
                     <h3>Type of Deliverable:</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget odio.</p>
-
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget odio.</p>
+                    <p>{{ listing.properties.type_of_deliverable }}</p>
 
                     <h3>Other Requirements:</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget odio.</p>
-
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget odio.</p>
+                    <p>{{ listing.properties.other_requirements }}</p>
                 </div>
             </div>
 
 
             <aside class="sidebar">
                 <ul class="actions-a">
-                    <li><a href="./" class="button-a">Make an Offer</a></li>
-                    <li><a href="./" class="button-b action-call">Call Client</a></li>
-                    <li><a href="./" class="button-b action-message">Send Message</a></li>
+                  {% if listing.state == 'pending' and collaborator != blank %}
+                    <li><a href="{{ 'new_dashboard_order_path' | generate_url: transactable_id: listing.id }}" class="button-a">Make an Offer</a></li>
+                  {% endif %}
+                    <li>{{ listing.creator.click_to_call_button }}</li>
+                    {% if collaborator != blank %}
+                      <li><a class="button-b action-message" data-modal="true" href="{{ listing.creator.user_message_path }}">Send Message</a></li>
+                    {% endif %}
                 </ul>
 
                 <hr>
 
                 <h4>About Company</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, amet, quos quia esse beatae aliquam tempore eaque non quis. Autem neque hic nihil veniam cupiditate exercitationem reprehenderit quisquam consequatur repellendus?</p>
+                <p>{{ listing.properties.about_company }}</p>
 
                 <hr>
 
                 <ul class="company-properties">
-                    <li><b>10</b> Projects Posted</li>
-                    <li><b>2</b> Projects Completed</li>
-                    <li>Member Since 2/19/2015</li>
+                  <li><b>{{ listing.creator.transactables_count }}</b> Projects Posted</li>
+                  <li><b>{{ listing.creator.completed_transactables_count }}</b> Projects Completed</li>
+                    <li>Member Since {{ listing.creator.created_at | to_date | l: 'short' }}</li>
                 </ul>
 
                 <hr>
 
-                <p class="payment-verified">
-                    <strong>Payment Method Verified</strong>
-                </p>
+                {% if listing.creator.has_active_credit_cards? %}
+                  <p class="payment-verified">
+                      <strong>Payment Method Verified</strong>
+                  </p>
 
-                <hr>
+                  <hr>
+                {% endif %}
 
                 <ul class="actions-a">
-                    <li><a href="./" class="button-b action-flag">Flag as inappropriate</a></li>
+                    <li><a data-href="{{ listing.inappropriate_report_path }}" data-modal="true" class="button-b action-flag">Flag as inappropriate</a></li>
                 </ul>
             </aside>
         </article>
