--- a/lib/tasks/uot/templates/registrations_buyer_footer.liquid
+++ b/lib/tasks/uot/templates/registrations_buyer_footer.liquid
@@ -1,1 +1,1 @@
-<p class="role-switch">Are you looking for projects instead? <a href="/users?role=seller">I want to work</a></p>
+<p class="role-switch">Are you looking for experts instead? <a href="/users?role=seller&amp;return_to=/transactable_types/project/list">I want to hire</a></p>
