--- a/lib/tasks/uot/templates/registrations_seller_footer.liquid
+++ b/lib/tasks/uot/templates/registrations_seller_footer.liquid
@@ -1,1 +1,1 @@
-<p class="role-switch">Are you looking for experts instead? <a href="/users?role=buyer">I want to hire</a></p>
+<p class="role-switch">Are you looking for projects instead? <a href="/users?role=buyer">I want to work</a></p>
