--- a/lib/tasks/uot/templates/home_index.liquid
+++ b/lib/tasks/uot/templates/home_index.liquid
@@ -18,7 +18,7 @@
     </div>
 
     <p class="more-a">
-        <a href="/search" class="button-a">Search for experts</a>
+        <a href="/search?sort=custom_attributes.hourly_rate_asc" class="button-a">Search for experts</a>
     </p>
 
     <div class="more-b">
