NM-litvault Fixes for intel

--- a/app/community_views/instance_admin/projects/projects/_index_row.html.haml
+++ b/app/community_views/instance_admin/projects/projects/_index_row.html.haml
@@ -1,5 +1,5 @@
 %tr
-  %td= link_to resource.name, project_path(resource)
+  %td= link_to resource.name, listing_path(resource)
   %td= resource.featured? ? 'Yes' : 'No'
   %td= l(resource.created_at.to_date, format: :long)
   - if resource.deleted?
