NM-5319 UoT Invite to project working

--- a/lib/tasks/uot/templates/registrations_show.liquid
+++ b/lib/tasks/uot/templates/registrations_show.liquid
@@ -161,6 +161,6 @@
             </aside>
         </article>
 
-        {% include 'transactables/invite.html' user: user %}
+        <div class="project-invite" id="project-invite-{{ user.id }}" data-collaborations-url="{{ 'collaborations_for_current_user_dashboard_company_user_path' | generate_url: user.id }}"></div>
     </div>
 </main>
