--- a/lib/tasks/uot/templates/search_list.liquid
+++ b/lib/tasks/uot/templates/search_list.liquid
@@ -189,7 +189,7 @@
                     {% endif %}
                 </article>
 
-                {% include 'transactables/invite.html' user: user %}
+                <div class="project-invite" id="project-invite-{{ user.id }}" data-collaborations-url="{{ 'collaborations_for_current_user_dashboard_company_user_path' | generate_url: user.id }}"></div>
             {% endfor %}
 
             {% if searcher.next_page %}
