--- a/lib/tasks/uot/templates/search_list.liquid
+++ b/lib/tasks/uot/templates/search_list.liquid
@@ -104,7 +104,7 @@
                     <div class="wrapper">
                         <header class="header">
                             <figure>
-                                <img src="{{user.avatar_url_thumb}}" alt="{{ user.name }}">
+                                <img src="{{user.avatar_url_big}}" alt="{{ user.name }}">
                             </figure>
                             <h2><a href="{{ user.user_profile_url }}">{{ user.name }}</a></h2>
 
